# circuits

./: ..gitignore.un~  .coveragerc  .dockerignore  .flake8  .gitignore  .hgchurn  .hgignore  .hgtags  .landscape.yml  .pre-commit-config.yaml  .project  .pullapprove.yml  .pydevproject  .travis.yml  CHANGES  CHANGES.rst  CONTRIBUTING.md  Dockerfile  FAILING_HTTOOP_TESTS  HISTORY.rst  Issue#115.py  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  RELEASE.rst  ReleaseNotes.rst  TODO_HTTOOP  bootstrap.sh  fig.yml  hello_bridge.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py  (+9 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE
.github/workflows/: pre-commit.yml  python-app.yml  release.yml  sast.yml
.travis/: install.sh
circuits/: __init__.py  bridge.py  core.py  debugger.py  drivers.py  six.py  timers.py  version.py  web.py  workers.py
circuits/app/: __init__.py  config.py  daemon.py  dropprivileges.py  env.py  log.py  setup.py  startup.py
circuits/compat/: __init__.py
circuits/core/: __init__.py  bridge.py  components.py  debugger.py  events.py  future.py  futures.py  handlers.py  helpers.py  loader.py  manager.py  pollers.py  pools.py  setup.py  timers.py  utils.py  values.py  workers.py
circuits/drivers/: __init__.py  _gtk.py  _inotify.py  _pygame.py
circuits/io/: __init__.py  events.py  file.py  notify.py  process.py  serial.py  setup.py  testio.py  version.py
circuits/lib/: __init__.py  ann.py  config.py  env.py  http.py  io.py  irc.py  log.py  pollers.py  pygamepump.py  smtp.py  sockets.py  web.py
circuits/net/: __init__.py  events.py  pollers.py  setup.py  sockets.py  utils.py
circuits/node/: __init__.py  client.py  events.py  node.py  protocol.py  server.py  setup.py  utils.py
circuits/protocols/: __init__.py  http.py  irc.py  line.py  setup.py  websocket.py
circuits/tests/: main.py  test_bridge.py  test_core.py  test_debugger.py  test_sockets.py  test_timers.py  test_tools.py  test_version.py  test_workers.py
circuits/tools/: __init__.py  bench.py  setup.py  sniffer.py
circuits/web/: __init__.py  __main__.py  _httpauth.py  cgifs.py  client.py  constants.py  controllers.py  core.py  decorators.py  dispatchers.py  errors.py  events.py  exceptions.py  headers.py  http.py  loggers.py  main.py  parsers.py  processors.py  querystring.py  servers.py  sessions.py  setup.py  tools.py  url.py  utils.py  webob.py  websocket.py  wrappers.py  wsgi.py
docs/: ChangeLog.wiki  Contributing.wiki  DownloadInstall.wiki  FrequentlyAskedQuestions.wiki  License.wiki  Makefile  QuickStart.wiki  WikiStart.wiki  api-objects.txt  check_docs.py  circuits-docs.xml  circuits-module.html  circuits.app-module.html  circuits.app.Daemon-class.html  circuits.app.Daemonize-class.html  circuits.app.WritePID-class.html  circuits.app.config-module.html  circuits.app.config.Config-class.html  circuits.app.config.Load-class.html  circuits.app.config.Save-class.html  circuits.app.env-module.html  circuits.app.env.Create-class.html  circuits.app.env.Created-class.html  circuits.app.env.Environment-class.html  circuits.app.env.Invalid-class.html  circuits.app.env.Load-class.html  circuits.app.env.Loaded-class.html  circuits.app.env.NeedsUpgrade-class.html  circuits.app.env.Upgrade-class.html  circuits.app.env.Upgraded-class.html  circuits.app.env.Verify-class.html  circuits.app.log-module.html  circuits.app.log.Critical-class.html  circuits.app.log.Debug-class.html  circuits.app.log.Error-class.html  circuits.app.log.Exception-class.html  circuits.app.log.Info-class.html  circuits.app.log.Logger-class.html  circuits.app.log.Warning-class.html  circuits.core-module.html  (+219 more)
docs/graphs/: Makefile
docs/html/: api-objects.txt  bridge.html  circuits-module.html  circuits-pysrc.html  circuits.__version__'-module.html  circuits.__version__'-pysrc.html  circuits.app-module.html  circuits.app.Daemon-class.html  circuits.app.config-module.html  (+551 more)
examples/: 99bottles.py  async_worker_webpage_download.py  callwait.py  cat.py  chatserver.py  circ.py  dirwatch.py  dnsclient.py  dnsserver.py  echoserer.py  echoserial.py  echoserver.py  echoserverunix.py  eventclient.py  eventserver.py  factorial.py  factorial_multiple.py  filewatch.py  filter.py  hello.py  hello_bridge.py  hello_multi_bridge.py  hello_node.py  helloweb.py  helloworld.py  index.rst  inheritance.py  ircbot.py  ircclient.py  ircd.py  keyecho.py  linktest.py  loops.py  multi_ircbot.py  nodeserver.py  ping.py  pingpong.py  portforward.py  primes.py  proxy.py  (+19 more)
fabfile/: __init__.py  docker.py  docs.py  help.py  release.py  utils.py
man/: circuits.bench.1  circuits.sniff.1  circuits.web.1
scripts/: circuits.bench  circuits.sniff  circuits.web
tests/: __init__.py  conftest.py  main.py  stacktracer.py  test_version.py
tmp/: Manager.dot  ann.py  ca.py  comet.py  db.py  futures.py  heavyweb.py  helloweb.py  helloweb2.py  helloweb3.py  lazy_evaluation.diff  output  pipelines.py  pools.py  protocols  rpcclient.py  simpleweb.py  sum_primes.py  sum_primes2.py  test.py  test.sh  test2.py  test_bridge.py  test_errors.py  test_feedback.py  test_gzip.py  test_httpclient.py  test_linking.py  test_logger.py  test_pipe.py  test_pools.py  test_pools2.py  test_pools3.py  test_popen.py  test_process.py  test_result_proxy.py  test_rpc.py  test_web.py  tracer.py  value.py  (+2 more)
tools/: bench.py  mkpkgs  runtests
(+676 files in other folders)
