[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "circuits"
description = "Asynchronous Component based Event Application Framework"
readme = "README_full.rst"
license = { text = "MIT" }
dynamic = ["version"]

authors = [
  { name = "James Mills", email = "prologic@shortcircuit.net.au" }
]

requires-python = ">=3.8"

keywords = [
  "event", "framework", "distributed", "concurrent", "component", "asynchronous"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: No Input/Output (Daemon)",
  "Environment :: Other Environment",
  "Environment :: Plugins",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Adaptive Technologies",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
  "Topic :: Communications :: Email :: Mail Transport Agents",
  "Topic :: Database",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://circuitsframework.com/"
Download = "https://github.com/circuits/circuits/releases"

[tool.setuptools]
include-package-data = false
script-files = [
  "bin/circuits.bench",
  "bin/htpasswd"
]

[tool.setuptools_scm]
write_to = "circuits/version.py"

[tool.setuptools.packages.find]
exclude = [
  "*.tests",
  "*.tests.*",
  "tests",
  "tests.*",
  "*.fabfile",
  "*.fabfile.*",
  "fabfile",
  "fabfile.*",
]

[project.scripts]
"circuits.web" = "circuits.web.main:main"

[project.optional-dependencies]
stomp = [
  "stompest>=2.3.0",
  "pysocks>=1.6.7"
]

[tool.sphinx]
source-dir = "docs/source"
build-dir = "docs/build"

[tool.ruff]
line-length = 127
target-version = "py37"

extend-exclude = ["circuits/web/parsers/multipart.py"]

[tool.ruff.lint]
preview = true
select = ["E", "W", "F", "I", "D", "TD"]
ignore = [
 "E501",  # line-too-long
 "E203",  # whitespace-before-punctuation
 "COM812",  # missing-trailing-comma
 "D203",  # one-blank-line-before-class
 "D212",  # multi-line-summary-first-line
 "D400",  # ends-in-period
 "D415",  # ends-in-punctuation
 "D102",  # Missing docstring in public method
 "D103",  # Missing docstring in public function
 "D101",  # Missing docstring in public class
 "D100",  # Missing docstring in public module
 "D107",  # Missing docstring in `__init__`
 "D205",  # 1 blank line required between summary line and description
 "D105",  # Missing docstring in magic method
 "D401",  # First line of docstring should be in imperative mood: "A shortcut to abspath, escape and lowercase."
 "D402",  # First line should not be the function's signature
 "D403",  # first-word-uncapitalized
 "D404",  # First word of the docstring should not be "This"
 "D104",  # Missing docstring in public package
 "T201", "T203",  # print, p-print
 "TD001",  # invalid-todo-tag
 "TD002",  # missing-todo-author
 "TD003",  # missing-todo-link
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

task-tags = ["TODO", "FIXME"]

[tool.ruff.lint.mccabe]
max-complexity = 40

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true
#filter-files = true
#force-grid-wrap = false
known-first-party = ["circuits"]
# https://github.com/astral-sh/ruff/issues/2600 :
#multi-line-output = 5
#include-trailing-comma = true
lines-after-imports = 2
#skip = ".tox,docs,circuits/web/parsers/multipart.py"
#skip-glob = "venv/*"
split-on-trailing-comma = false
